# WATaBoy

./: Cargo.toml  LICENSE  README.md  build.rs  cargo.toml  index.html
.cargo/: config.toml
.github/workflows/: rust.yml
.nova/: Configuration.json
.nova/Tasks/: Cargo (log uncompiled).json  Cargo (no trace).json  Cargo (tracing).json  Cargo Test.json  Cargo.json  Interp Test.json  JIT (disable JIT).json  JIT (log uncompiled).json  JIT (no trace).json  JIT (tracing).json  JIT Bun Test.json  Native Interp.json
boot_interp/: Cargo.toml
boot_interp/src/: main.rs
debugger/: Cargo.toml
debugger/src/: app.rs  dnd_rom.rs  interrupts.rs  lib.rs  main.rs  memory.rs  oam.rs  registers.rs  tile_map.rs  tiles.rs  waking_ppu.rs  waking_timers.rs  woke_timers.rs
hw-constants/: Cargo.toml
hw-constants/src/: io_regs.rs  lib.rs  post_boot.rs
interpreter/: Cargo.toml
interpreter/benches/: ten_seconds.rs
interpreter/src/: bus.rs  cpu.rs  dma.rs  lib.rs  mbc.rs  ppu.rs  timers.rs
interpreter/src/bus/: waking_counters.rs
interpreter/src/cpu/opcodes/: cycles.rs  parameters.rs
interpreter/src/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs
interpreter/src/ppu/: bg_fetcher.rs  oam.rs  palette.rs
interpreter/src/ppu/registers/: lcd_control.rs  lcd_status.rs
interpreter/tests/: blarggs_cpu_instrs.rs  blarggs_mem_timing_2.rs  mooneye.rs  mooneye_instr.rs  mooneye_mbc1.rs  mooneye_mbc2.rs  mooneye_mbc5.rs  mooneye_oam.rs  mooneye_ppu.rs  mooneye_timer.rs
interpreter/tests/common/: blarggs.rs  mooneye.rs
jit/: Cargo.toml  bench.html  build.rs  index.html  saves.html
jit/js/: frametime.js  keyboard.js  main.js  runtime.js
jit/js/__tests__/: blarggs_cpu_instrs.test.js  blarggs_instr_timing.test copy.js  blarggs_mem_timing_2.test.js  common.js  mooneye.test.js  mooneye_instr.test.js  mooneye_mbc1.test.js  mooneye_mbc2.test.js  mooneye_mbc5.test.js  mooneye_oam.test.js  mooneye_ppu.test.js  mooneye_timer.test.js
jit/src/: cache.rs  codegen.rs  lib.rs  runtime.rs  test_roms.rs
jit/src/codegen/: instructions.rs  macros.rs  module.rs  registers.rs
jit/src/codegen/instructions/: block0.rs  block1.rs  block2.rs  block3.rs  prefix.rs
js/: frametime.js  glue.js  main.js  runtime.js
js/__tests__/: 09-op.test.js  blarggs_cpu_instrs.test.js  mooneye_ppu.test.js
native-interp/: Cargo.toml
native-interp/src/: main.rs
ppu/: Cargo.toml
ppu-view/: Cargo.toml  index.html
ppu-view/assets/: sw.js
ppu-view/src/: app.rs  interrupts.rs  lib.rs  main.rs  memory.rs  oam.rs  registers.rs  woke_ppu.rs
ppu/src/: bg_fetcher.rs  lcd.rs  lcd_control.rs  lcd_status.rs  lib.rs  oam.rs  obj_fetcher.rs  palette.rs  pixel_fetcher.rs  ppu.rs  stat_mode.rs  tiles.rs
sm83-interp/: Cargo.toml
sm83-interp/src/: addressable.rs  bus.rs  cpu.rs  cycles.rs  hw_addrs.rs  joypad.rs  lib.rs  mbc.rs  opcodes.rs  parameters.rs  ppu.rs  registers.rs  timers.rs
sm83-interp/src/bus/: woke_counters.rs
sm83-interp/src/common/: mod.rs  post_boot.rs
sm83-interp/src/cpu/: cycles.rs  interrupt_bits.rs  opcodes.rs  registers.rs
sm83-interp/src/cpu/opcodes/: cycles.rs
sm83-interp/src/mbc/: mbc1.rs  mod.rs
sm83-interp/src/ppu/: bg_fetcher.rs  lcd_control.rs  lcd_status.rs  oam.rs  obj_fetcher.rs  palette.rs  registers.rs  tiles.rs
sm83-interp/src/ppu/registers/: lcd_status.rs
sm83-interp/src/timers/: registers.rs
sm83-interp/tests/: blarggs_cpu_instrs.rs  blarggs_instr_timing.rs  blarggs_mem_timing_2.rs  cpu_instrs.rs  interrupts.rs  mooneye.rs  mooneye_mbc1.rs  mooneye_oam.rs  mooneye_ppu.rs  mooneye_timer.rs  special.rs
sm83-interp/tests/common/: blarggs.rs  mod.rs  mooneye.rs
sm83-jit/: .gitignore  Cargo.toml  index.html  readme.md
sm83-jit/.nova/: Configuration.json
sm83-jit/.nova/Tasks/: Bun Test.json
sm83-jit/js/: keyboard.js  main.js
sm83-jit/js/__tests__/: blarggs_cpu_instrs.test.js  blarggs_instr_timing.test copy.js  blarggs_mem_timing_2.test.js  common.js  mooneye.test.js  mooneye_mbc1.test.js  mooneye_oam.test.js  mooneye_ppu.test.js  mooneye_timer.test.js
sm83-jit/src/: codegen.rs  runtime.rs  test_roms.rs
sm83-jit/src/codegen/: macros.rs  registers.rs
sm83-jit/src/codegen/instructions/: block0.rs  block2.rs  block3.rs  prefix.rs
src/: app.rs  cache.rs  codegen.rs  codegen_utils.rs  dnd_rom.rs  interrupts.rs  lib.rs  main.rs  memory.rs  oam.rs  registers.rs  runtime.rs  test_roms.rs  tile_map.rs  tiles.rs  woke_ppu.rs  woke_timers.rs
src/codegen/: instructions.rs  macros.rs  module.rs  registers.rs
src/codegen/instructions/: block0.rs  block1.rs  block2.rs  block3.rs  prefix.rs
