[package]
name = "jit"
version = "0.1.0"
authors = ["Seth Humphries <seth@humphri.es>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
enumset = "1.1.10"
wasm-encoder = "0.248.0"
interpreter = { path = "../interpreter" }
hw-constants = { path = "../hw-constants" }
# This library is massive, only include it when JIT tracing is enabled.
wasmprinter = { version = "0.248.0", optional = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[features]
jit-trace = ["dep:wasmprinter"]
log-uncompiled = []