[package]
name = "sm83-interp"
version = "0.1.0"
edition = "2024"

[dependencies]
hw-constants = { path = "../hw-constants" }
bitfield-struct = "0.12.1"
bitmatch = "0.1.1"
arbitrary-int = "2.1.0"
log = "0.4.29"
rkyv = "0.8.14"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[features]
ppu-logging = []
cpu-logging = []
woke-counters = []